rimossi alcuni warning