@@ -5,16 +5,18 @@
 public class array_init{
     public static void main(String[] args) {
         Integer[] a = {
-            new Integer(1),
-            new Integer(2),
-            new Integer(3)
+             Integer.valueOf(1),
+             Integer.valueOf(2),
+             Integer.valueOf(3)
         };
 
         Integer[] b = new Integer[] {
-            new Integer(1),
-            new Integer(2),
-            new Integer(3)
+            Integer.valueOf(1),
+            Integer.valueOf(2),
+            Integer.valueOf(3)
         };
+
+        System.out.println("A: " +a + " B: "+b);
 
         
     }
